@@ -10,7 +10,7 @@ import simplejson
 import sys
 from pygments.lexers.agile import PythonLexer
 from pygments.formatters.terminal256 import Terminal256Formatter
-from bunch import Bunch
+#from bunch import Bunch
 
 # Get an instance of a logger
 logger = logging.getLogger(__name__)
@@ -95,10 +95,10 @@ class Print(Node):
 
 
                 if sys.stdout.isatty():
-                    print highlight(res, self._lexer, self._formatter) #[:-1]
-                    #print res
+                    print(highlight(res, self._lexer, self._formatter)) #[:-1]
+                    #print(res)
                 else:
-                    print res
+                    print(res)
 
         yield m
 
@@ -122,8 +122,8 @@ class PrettyPrint(Print):
     def _prepare_res(self, obj):
 
         #res = str(obj)
-        if isinstance(obj, Bunch):
-            obj = obj.toDict()
+        #if isinstance(obj, Bunch):
+        #    obj = obj.toDict()
         res = self._pp.pformat(obj)
 
         return res
